--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,12 +12,15 @@
     "chart.js": "^3.8.0",
     "chartjs-adapter-moment": "^1.0.0",
     "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.2"
   },
