--- a/server/requirements-dev.txt
+++ b/server/requirements-dev.txt
@@ -23,3 +23,6 @@ urllib3==1.26.12
 whitenoise==6.2.0
 python-decouple
 geocoder
+django-cors-headers
+djangorestframework-simplejwt
+django-url-filter
