--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.8.0",
     "chartjs-adapter-moment": "^1.0.0",
     "moment": "^2.29.4",
+    "otp-generators": "^1.0.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
