--- a/server/requirements-dev.txt
+++ b/server/requirements-dev.txt
@@ -1,19 +1,33 @@
 asgiref==3.5.2
+cached-property==1.5.2
 certifi==2022.9.14
 chardet==4.0.0
+click==8.1.3
+colorama==0.4.5
+decorator==5.1.1
 dj-database-url==1.0.0
 dj-static==0.0.6
 Django==3.2.6
+django-cors-headers==3.13.0
+django-filter==22.1
 django-heroku==0.3.1
+django-url-filter==0.3.15
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.1
+enum-compat==0.0.3
+future==0.18.2
+geocoder==1.38.1
 gitdb==4.0.9
 GitPython==3.1.27
 idna==2.10
 psycopg2==2.9.3
 PyJWT==2.5.0
 pyotp==2.7.0
+python-decouple==3.6
 pytz==2022.2.1
+ratelim==0.1.6
 requests==2.25.1
+six==1.16.0
 smmap==5.0.0
 sqlparse==0.4.2
 static3==0.7.0
@@ -21,8 +35,3 @@ twilio==7.14.0
 typing_extensions==4.3.0
 urllib3==1.26.12
 whitenoise==6.2.0
-python-decouple
-geocoder
-django-cors-headers
-djangorestframework-simplejwt
-django-url-filter
