--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,13 +9,12 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "bootstrap": "^5.2.1",
-    "chart.js": "^3.8.0",
-    "chartjs-adapter-moment": "^1.0.0",
-    "moment": "^2.29.4",
+    "chart.js": "^3.9.1",
     "otp-generators": "^1.0.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-helmet": "^6.1.0",
