--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "bootstrap": "^5.2.1",
     "chart.js": "^3.9.1",
+    "jspdf": "^2.5.1",
     "otp-generators": "^1.0.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
